Fix search icon misalignment in XS width

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -2052,7 +2052,7 @@ span#profileFullname{
     }
     .osf-xs-search {
         text-decoration: none !important;
-        padding: 8px;
+        padding: 14px;
     }
 }
 
